need more perm gen space
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/2.0@583358 13f79535-47bb-0310-9956-ffa450edef68